tests/gabc-dump/should-fail/bad-hepisema-4.gabc
name: bad horizontal episema (4);
%%
(c4) g(g__0)
